fix breadcrumb spacing

--- a/user/themes/longread/scss/custom.scss
+++ b/user/themes/longread/scss/custom.scss
@@ -797,7 +797,7 @@ form#email-capture {
     a {
       text-decoration: underline;
     }
-    .breadcrumb {
+    .breadcrumb-symbol {
       padding: 5px;
     }
   }
